# PongPlusPlus

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yaml  linux.yaml  windows.yaml
include/: ball.hpp  board.hpp  board_const.hpp  drawable.hpp  game_app.hpp  game_window.hpp  player.hpp
lib/win/GL3H/Debug/: GL3H.lib
lib/win/GL3H/Release/: GL3H.lib
lib/win/GLFW/: glfw3dll.lib
lib/win/GraRen/: GraRen.lib
lib/win/GraRen/Debug/: GraRen.lib
lib/win/GraRen/Release/: GraRen.lib
src/: ball.cpp  board.cpp  game_app.cpp  game_window.cpp  main.cpp  player.cpp
